my update commitment on this project

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ header{
 	background-size: cover;
 	padding-left: 5vw;
 	padding-right: 5vw;
+	background-position: center;
 }
 .hamburger{
 	color: white;
@@ -76,7 +77,7 @@ font-weight: 400;
 }
 #opt{
 	margin-top: 7vh;
-padding-left: 5rem;
+padding-left: 2rem;
 }
 .start{
 	margin-top: 25vh;
@@ -105,15 +106,16 @@ nav{
 	background:#FFCD6B ;
 }
 .back a{
-	margin-left: 70vw;
+	margin-left: 65vw;
 	background:#ca7113 ;
 	position: fixed;
-	line-height: 4rem;
+	line-height:2.6rem;
 	padding: 0.5rem;
 	white-space: nowrap;
 	border-radius: 4rem;
 	text-decoration: none;
 	color:#001029 ;
+	font-weight: 600;
 }
 .B{
 	width: 92vw;
@@ -129,7 +131,7 @@ text-align: center;
 border-radius: 4px;
 }
 .b1, .b2, .b3, .b4, .b5, .b6{
-	content: url("./images/vector.svg");
+	content: url("./images/Vector.png");
 	height: 1.5rem;
 	width: 1.5rem;
 	border-left: 1px solid #D6D6D6;
@@ -155,8 +157,8 @@ background: linear-gradient(180deg, rgba(255, 255, 255, 0) 34.38%, rgba(255, 240
 linear-gradient(0deg, #FFFFFF, #FFFFFF);
 width: 94%;
 padding: 2rem;
+padding-bottom: 3rem;
 margin-left: 3%;
-height: 30rem;
 box-shadow: 0px 4px 34px 21px #9D9D9D0F;
 margin-bottom:5vh;
 border-radius: 6px;
@@ -245,8 +247,8 @@ content: url("./images/24-hours-svgrepo-com 1.svg");
 padding: 1rem;
 }
 .sect2-image{
-	height: 40vh;
-	width: 75vw;
+	height: 18rem;
+	width: 25rem;
 	margin-top: 10vh;
 }
 .line1, .line2, .line3{
@@ -255,7 +257,8 @@ padding: 1rem;
 }
 .sect2{
 	text-align: center;
-	padding: 4rem;
+	padding: 1rem;
+	padding-right: 2.5rem;
 }
 .text-content1 p{
 	font-family: Montserrat;
@@ -271,36 +274,37 @@ content: url("./images/why-choose-us.png");
 margin: 0;
 }
 td{
-	font-size: 1.3rem;
+	font-size: 0.8rem;
 }
 td span{
 	color: #8BFDAB;
-	font-size: 0.9rem;
+	font-size: 0.6rem;
 }
 table{
 	border:1px solid #B5B5B5;
 	padding: 1rem;
 	border-radius: 0.5rem;
 	text-align: center;
-margin-left: 10vw;
+margin-left: 3vw;
 background: #ECECEC;
 }
 tr{
 	display: flex;
-	gap: 5vw;
+	gap: 2vw;
 	white-space: nowrap;
-	padding-bottom: 2vh;
 	background: #fff;
+	margin-bottom: 0.8rem;
+	padding: 0.5rem;
 }
 .sect4-left > span, .sect4-right > span{
 	color: #3E45FF;
 	line-height: 1.7rem;
-	font-size: 1.2rem;
+	font-size: 1rem;
 	font-weight: 700;
 	display: block;
 	padding-top:15vh;
 	padding-bottom:3vh;
-margin-left: 15vw;
+margin-left: 5vw;
 }
 
 
@@ -330,7 +334,7 @@ margin-left: 15vw;
 	</a>	</button>
 		</div>
 		<div class="back">
-			<a href="#top">Back to top</a>
+			<a href="#top">Top &#x2191;</a>
 		</div>
 		
 
@@ -349,7 +353,7 @@ margin-left: 15vw;
 			<li> <span class="b1"> </span> 
 
 				<span class="side-b1">
-				<div class="b1-row1">4,565.80  <img src="./images/vector 14.png"> </div>
+				<div class="b1-row1">4,565.80  <img src="./images/Vector 14.png"> </div>
 
 				<div class="b1-row2">BITCOIN <span>BTC</span></div>
 
@@ -361,7 +365,7 @@ margin-left: 15vw;
 			<li> <span class="b2"> </span> 
 
 				<span class="side-b2">
-				<div class="b2-row1">4,565.80  <img src="./images/vector 14.png"> </div>
+				<div class="b2-row1">4,565.80  <img src="./images/Vector 14.png"> </div>
 <div class="b2-row2">BITCOIN <span>BTC</span></div>
 
 			</span> 
@@ -372,7 +376,7 @@ margin-left: 15vw;
 			<li> <span class="b3"> </span> 
 
 				<span class="side-b3">
-				<div class="b3-row1">4,565.80  <img src="./images/vector 14.png"> </div>
+				<div class="b3-row1">4,565.80  <img src="./images/Vector 14.png"> </div>
 
 				<div class="b3-row2">BITCOIN <span>BTC</span></div>
 
@@ -382,7 +386,7 @@ margin-left: 15vw;
 <li> <span class="b4"> </span> 
 
 				<span class="side-b4">
-				<div class="b4-row1">4,565.80  <img src="./images/vector 14.png"> </div>
+				<div class="b4-row1">4,565.80  <img src="./images/Vector 14.png"> </div>
 
 				<div class="b4-row2">BITCOIN <span>BTC</span></div>
 
@@ -394,7 +398,7 @@ margin-left: 15vw;
 			<li> <span class="b5"> </span> 
 
 				<span class="side-b5">
-				<div class="b5-row1">4,565.80  <img src="./images/vector 14.png"> </div>
+				<div class="b5-row1">4,565.80  <img src="./images/Vector 14.png"> </div>
 
 				<div class="b5-row2">BITCOIN <span>BTC</span></div>
 
@@ -405,7 +409,7 @@ margin-left: 15vw;
 			<li> <span class="b6"> </span> 
 
 				<span class="side-b6">
-				<div class="b6-row1">4,565.80  <img src="./images/vector 14.png"> </div>
+				<div class="b6-row1">4,565.80  <img src="./images/Vector 14.png"> </div>
 
 				<div class="b6-row2">BITCOIN <span>BTC</span>  </div>
 
