--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@ background: radial-gradient(60.96% 233.66% at 19.41% -27.87%, #7C4B00 0%, #FFCD6
 	text-decoration: none;
 	color: #000;
 }
-nav{
 
-}
 .back{
 	padding-right: 2rem;
 	padding-bottom: 2rem;
@@ -132,8 +130,8 @@ border-radius: 4px;
 }
 .b1, .b2, .b3, .b4, .b5, .b6{
 	content: url("./images/Vector.png");
-	height: 1.5rem;
-	width: 1.5rem;
+	height: 1.2rem;
+	width: 1.2rem;
 	border-left: 1px solid #D6D6D6;
 	padding-left: 0.2rem;
 }
@@ -479,6 +477,80 @@ margin-top: 3vh;
 	padding-bottom: 5vh;
 	border-bottom: 4px solid #fff;
 }
+
+
+
+@media(min-width:740px){
+.b1, .b2, .b3, .b4, .b5, .b6{
+	height: 1.5rem;
+	width: 1.5rem;
+	border-left: 1px solid #D6D6D6;
+	padding-left: 0.5rem;
+}
+.B{
+	gap: 3vw;
+}
+
+}
+@media(min-width:810px){
+	.b1, .b2, .b3, .b4, .b5, .b6{
+	height: 1.8rem;
+	width: 1.8rem;
+	border-left: 1px solid #D6D6D6;
+	padding-left: 0.7rem;
+}
+.B{
+	gap: 4vw;
+}
+tr{
+gap: 5vw;
+}
+td{
+	font-size: 1.2rem;
+}
+td span{
+	color: #8BFDAB;
+	font-size: 0.9rem;
+}
+}
+@media(min-width:1020px){
+.B{
+	gap: 6vw;
+}
+nav ul{
+	line-height: 2rem;
+	padding: 3vw;
+	background:/*#3d4c69*/ /*#ca7113*/ none;
+	list-style: none;
+	transform: none;
+	display: flex;
+	gap: 10vw;
+	margin-left:initial;
+white-space: nowrap;
+}
+ul li a{
+color: white;
+}
+ul li a:hover{
+color: #001029;
+background: radial-gradient(60.96% 233.66% at 19.41% -27.87%, #7C4B00 0%, #FFCD6B 51.04%, #A68227 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+padding: 0.5rem;
+border-radius: 0.4rem;
+}
+.hamburger{
+display: none;
+}
+
+
+
+}
+@media(min-width:740px){}
+@media(min-width:740px){}
+
+
+
+
+
 
 
 
