--- a/index.html
+++ b/index.html
@@ -540,9 +540,29 @@ border-radius: 0.4rem;
 .hamburger{
 display: none;
 }
+.things{
+	display: flex;
+}
+.sect2{
+	display: flex;
+	gap: 5vw;
+	padding-top: 5vh;
+padding-bottom: 5vh;
+}
+.line1, .line2, .line3{
+	display: flex;
+	font-size: 0.9rem;
+width: 47vw;
 
-
-
+}
+.line2, .line3{
+	margin-top: -5vh;
+}
+.sect2-image{
+width: 30rem;	
+height: 20rem;
+margin-top: 2vh;	
+}
 }
 @media(min-width:740px){}
 @media(min-width:740px){}
