--- a/index.html
+++ b/index.html
@@ -708,11 +708,11 @@ white-space: nowrap;
 				<span class="closer">&#x2715;</span>
 			</div>
 			<ul class="ul">
-				<li> <a href="">The Market</a> </li>
-				<li> <a href="">Sign Up</a> </li>
-				<li> <a href="">About Us</a> </li>
-				<li> <a href="">Login</a> </li>
-				<li> <a href="https://wa.me/+2348147383504">Contact Us</a> </li>
+				<li> <a href="./other-pages/the-market.html">The Market</a> </li>
+				<li> <a href="./other-pages/sign-up.html">Sign Up</a> </li>
+				<li> <a href="./other-pages/about-us.html">About Us</a> </li>
+				<li> <a href="./other-pages/login.html">Login</a> </li>
+				<li> <a href="./other-pages/contact-us.html">Contact Us</a> </li>
 			</ul>
 		</nav>
 		<div id="opt">
