--- a/other-pages/login.html
+++ b/other-pages/login.html
@@ -107,7 +107,7 @@ padding-right: 10vw;
 }
 .news-form{
 	background:linear-gradient(to right, #838087, #848290, #86849c);
-	width: 80vw;
+	width: 70vw;
 	padding: 1rem;
 	border-radius: 0.6rem;
 }
@@ -255,22 +255,42 @@ white-space: nowrap;
 </header>
 
 <main>
+
 <section class="sections">
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
+	<div class="sign-in">Sign In</div>
+	<div class="sign-up">Sign Up</div>
 </section>
 
-<aside class="asides"></aside>
+<aside class="asides">
+	<form>
+		<div>
+		<label for="name">Name</label> <input type="text" placeholder="Enter Name" id="name"> 
+		</div>
+
+		<div>
+		<label for="number">Phone Number</label> <input type="text" placeholder="Enter Phone Number" id="number">
+		</div>
+
+		<div>
+		<label for="email">E-Mail</label> <input type="text" placeholder="Enter E-mail" id="email">
+		</div>
+
+		<div>
+		<label for="country">Country</label> <input type="text" placeholder="Enter Country" id="country">
+		</div>
+
+		<div>
+		<label for="referral">Referral Code:</label> <input type="text" placeholder="Referral Code(optional)" id="referral">
+</div>
+
+<p class="buttons">
+		<button type="submit" class="button1">Sign In</button>
+		<button type="submit" class="button2">Sign Up</button>
+		</p>
+
+	</form>
+</aside>
+
 
 </main>
 
