--- a/other-pages/sign-up.html
+++ b/other-pages/sign-up.html
@@ -45,18 +45,71 @@ header div a{
 header div a:hover{
 background: red;
 }
-.sections{
+main{
 	display: inline-block;
 	padding-top: 0vh;
-	margin-left: 5vw;
-	margin-right: 5vw;
+	margin-left: 7vw;
+	margin-right: 8vw;
 	margin-bottom: 5vh;
 	text-align: center;
 	margin-top: -10vh;
 	background: #fff;
-	width: 85vw;
+	width: 80vw;
 	padding: 1rem;
+	padding-bottom: 2rem;
+	box-shadow: 0px 0px 1px 1px #efefef;
+border-radius: 1rem;
 }
+.sections{
+padding-bottom: 4rem;
+}
+form div{
+	margin-bottom: 3vh;
+}
+form p{
+	margin-top: 6vh;
+}
+.sign-up{
+display: inline-block;
+border-left: 1px solid #aaa;
+padding: 2rem 4rem 2rem 4rem;
+border-bottom: 1px solid #aaa;	
+background: #eeeeee;
+
+}
+.sign-in{
+display: inline-block;	
+padding: 2rem 4rem 2rem 4rem;
+margin-right: -0.3rem;
+border-bottom: 1px solid #aaa;	
+
+}
+.sections div:hover{
+background: #eeeeee;
+cursor: pointer;	
+}
+.button1{
+padding: 0.5rem 2rem 0.5rem 2rem;
+border:none;
+pointer-events: none;
+background: none;
+font-size: 1.2rem;
+margin-right: 20vw;
+opacity: 60%;
+}
+.button2{
+	background: radial-gradient(60.96% 233.66% at 19.41% -27.87%, #7C4B00 0%, #868900 51.04%, #7C4B00 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+	color: white;
+	border: none;
+padding: 0.5rem 2rem 0.5rem 2rem;
+font-weight: 600;
+font-size: 1.2rem;
+border-radius: 0.4rem;
+}
+.button2:hover{
+cursor: pointer;
+}
+
 
 
 
@@ -107,7 +160,7 @@ padding-right: 10vw;
 }
 .news-form{
 	background:linear-gradient(to right, #838087, #848290, #86849c);
-	width: 80vw;
+	width: 70vw;
 	padding: 1rem;
 	border-radius: 0.6rem;
 }
@@ -174,7 +227,17 @@ margin-top: 3vh;
 	padding-bottom: 5vh;
 	border-bottom: 4px solid #fff;
 }
+.asides input{
+	border:none;
+	background: #eeeeee;
+	padding: 0.8rem;
+border-radius: 0.4rem;
 
+}
+form{
+	text-align: center;
+
+}
 
 
 
@@ -256,21 +319,39 @@ white-space: nowrap;
 
 <main>
 <section class="sections">
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
+	<div class="sign-in">Sign In</div>
+	<div class="sign-up">Sign Up</div>
 </section>
 
-<aside class="asides"></aside>
+<aside class="asides">
+	<form>
+		<div>
+		<label for="name">Name</label> <input type="text" placeholder="Enter Name" id="name"> 
+		</div>
+
+		<div>
+		<label for="number">Phone Number</label> <input type="text" placeholder="Enter Phone Number" id="number">
+		</div>
+
+		<div>
+		<label for="email">E-Mail</label> <input type="text" placeholder="Enter E-mail" id="email">
+		</div>
+
+		<div>
+		<label for="country">Country</label> <input type="text" placeholder="Enter Country" id="country">
+		</div>
+
+		<div>
+		<label for="referral">Referral Code:</label> <input type="text" placeholder="Referral Code(optional)" id="referral">
+</div>
+
+<p class="buttons">
+		<button type="submit" class="button1">Sign In</button>
+		<button type="submit" class="button2">Sign Up</button>
+		</p>
+
+	</form>
+</aside>
 
 </main>
 
