--- a/other-pages/the-market.html
+++ b/other-pages/the-market.html
@@ -50,14 +50,23 @@ background: red;
 	padding-top: 0vh;
 	margin-left: 5vw;
 	margin-right: 5vw;
-	margin-bottom: 5vh;
+	margin-bottom: 0vh;
 	text-align: center;
 	margin-top: -10vh;
 	background: #fff;
 	width: 85vw;
-	padding: 1rem;
-}
+	height: 50vh;
+content: url("../images/trade 1.png");
 
+}
+.asides{
+	margin-left: 5vw;
+	margin-right: 5vw;
+	margin-bottom: 5vh;
+	width: 85vw;
+	height: 40vh;
+content: url("../images/Group 8.png");
+}
 
 
 footer{
@@ -107,7 +116,7 @@ padding-right: 10vw;
 }
 .news-form{
 	background:linear-gradient(to right, #838087, #848290, #86849c);
-	width: 80vw;
+	width: 70vw;
 	padding: 1rem;
 	border-radius: 0.6rem;
 }
@@ -176,9 +185,18 @@ margin-top: 3vh;
 }
 
 
+@media(min-width:900px){
+	.sections{
+	width: 85vw;
+	height: 50vh;
 
+}
+.asides{
+	width: 85vw;
+	height: 50vh;
 
-
+}
+}
 
 @media(min-width:1020px){
 	.footer-child{
@@ -242,6 +260,8 @@ white-space: nowrap;
 
 }
 
+
+
 	</style>
 </head>
 <body>
@@ -256,18 +276,7 @@ white-space: nowrap;
 
 <main>
 <section class="sections">
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
+	
 </section>
 
 <aside class="asides"></aside>
