--- a/other-pages/the-market.html
+++ b/other-pages/the-market.html
@@ -55,7 +55,7 @@ background: red;
 	margin-top: -10vh;
 	background: #fff;
 	width: 85vw;
-	height: 50vh;
+	height: 30vh;
 content: url("../images/trade 1.png");
 
 }
@@ -64,7 +64,7 @@ content: url("../images/trade 1.png");
 	margin-right: 5vw;
 	margin-bottom: 5vh;
 	width: 85vw;
-	height: 40vh;
+	height: 30vh;
 content: url("../images/Group 8.png");
 }
 
@@ -185,20 +185,40 @@ margin-top: 3vh;
 }
 
 
-@media(min-width:900px){
+@media(min-height:1000px){
 	.sections{
-	width: 85vw;
-	height: 50vh;
-
+	height: 35vh;
 }
 .asides{
-	width: 85vw;
-	height: 50vh;
-
+	height: 35vh;
+}
+}
+@media(min-height:1400px){
+	.sections{
+	height: 40vh;
+}
+.asides{
+	height: 40vh;
+}
+}
+@media(min-height:1800px){
+	.sections{
+	height: 42vh;
+}
+.asides{
+	height: 42vh;
 }
 }
 
 @media(min-width:1020px){
+
+.sections{
+	height: 60vh;
+}
+.asides{
+	height: 60vh;
+}
+
 	.footer-child{
 	display: flex;
 	align-items: flex-start;
@@ -259,7 +279,8 @@ white-space: nowrap;
 }
 
 }
-
+@media(min-width:900px){}
+@media(min-width:900px){}
 
 
 	</style>
