--- a/other-pages/sign-up.html
+++ b/other-pages/sign-up.html
@@ -237,7 +237,7 @@ margin-top: 3vh;
 	background: #eeeeee;
 	padding: 0.5rem;
 border-radius: 0.4rem;
-
+width: 40vw;
 }
 form{
 	text-align: center;
