--- a/other-pages/login.html
+++ b/other-pages/login.html
@@ -107,8 +107,8 @@ footer{
 	background-image:url("../images/web9 1.png") ;
 	background-size: cover;
 	width: 100vw;
-	padding-right: 10vw;
-	padding-left: 10vw;
+	/*padding-right: 10vw;
+	padding-left: 10vw;*/
 	text-align: center;
 	padding-top: 5vh;
 	padding-bottom: 10vh;
@@ -185,6 +185,8 @@ margin-top: 2vh;
 }
 .newsletter{
 	margin-top: 6vh;
+	padding-left: 10vw;
+	padding-right: 10vw;
 }
 .newsletter p{
 	color: #fff;
