--- a/index.html
+++ b/index.html
@@ -361,11 +361,12 @@ margin-left: 20vw;
 margin-top: -3vh;
 }
 footer{
+	display: block;
 	background-image:url("./images/web9 1.png") ;
 	background-size: cover;
 	width: 100vw;
-	padding-right: 10vw;
-	padding-left: 10vw;
+	/*padding-right: 10vw;
+	padding-left: -5vw;*/
 	text-align: center;
 	padding-top: 5vh;
 	padding-bottom: 10vh;
@@ -400,17 +401,24 @@ width: 2rem;
 	font-size: 1.2rem;
 	margin-bottom: 3vh;
 }
-.contact figure{
-display: flex;
+.contact span div{
+display: inline-block;
+margin-left: 5vw;
+margin-right: 5vw;
+}
+.contact span{
+display: block;
 gap: 9vw;
-padding-left: 4vw;
-padding-right: 10vw;
+/*padding-left: 4vw;
+padding-right: 10vw;*/
+align-items: center;
 }
 .news-form{
 	background:linear-gradient(to right, #838087, #848290, #86849c);
 	width: 80vw;
 	padding: 1rem;
 	border-radius: 0.6rem;
+
 }
 .submit{
 	background: #0F17CE;
@@ -439,6 +447,8 @@ margin-top: 2vh;
 }
 .newsletter{
 	margin-top: 6vh;
+	padding-left: 5vw;
+	padding-right: 5vw;
 }
 .newsletter p{
 	color: #fff;
@@ -623,16 +633,17 @@ padding-bottom: 4rem;
 .footer-child{
 	display: flex;
 	align-items: flex-start;
-	gap: 10vw;
+	gap: 5vw;
 }
-.contact figure div{
+.contact span  div{
 	margin-bottom: 3vh;
-	margin-left: -5vw;
+/*	margin-left: -5vw;*/
+
 }
-.contact figure{
+.contact span{
 display: initial;
 padding-left: 0;
-
+text-align: center;
 }
 footer{
 	padding-right: 3vw;
@@ -1022,7 +1033,7 @@ and mobile friendly user interface.
 
 	<div class="contact">
 		<p>Contact Us</p> 
-<figure>
+<span>
 		<div class="frame-spot">
 			<a href="mailto:gtoleo21@gmail.com"></a>
 		</div> 
@@ -1035,7 +1046,7 @@ and mobile friendly user interface.
 		 <div class="group-call">
 			<a href="tel:+2348147383504"></a>
 		 </div> 
-	</figure>
+	</span>
 	</div>
 
 	<div class="explore">
