--- a/other-pages/the-market.html
+++ b/other-pages/the-market.html
@@ -73,8 +73,8 @@ footer{
 	background-image:url("../images/web9 1.png") ;
 	background-size: cover;
 	width: 100vw;
-	padding-right: 10vw;
-	padding-left: 10vw;
+	/*padding-right: 10vw;
+	padding-left: 10vw;*/
 	text-align: center;
 	padding-top: 5vh;
 	padding-bottom: 10vh;
@@ -108,11 +108,18 @@ width: 2rem;
 	font-size: 1.2rem;
 	margin-bottom: 3vh;
 }
-.contact figure{
-display: flex;
+
+.contact span div{
+display: inline-block;
+margin-left: 5vw;
+margin-right: 5vw;
+}
+.contact span{
+display: block;
 gap: 9vw;
-padding-left: 4vw;
-padding-right: 10vw;
+/*padding-left: 4vw;
+padding-right: 10vw;*/
+align-items: center;
 }
 .news-form{
 	background:linear-gradient(to right, #838087, #848290, #86849c);
@@ -147,6 +154,8 @@ margin-top: 2vh;
 }
 .newsletter{
 	margin-top: 6vh;
+	padding-left: 10vw;
+	padding-right: 10vw;
 }
 .newsletter p{
 	color: #fff;
@@ -222,16 +231,17 @@ margin-top: 3vh;
 	.footer-child{
 	display: flex;
 	align-items: flex-start;
-	gap: 10vw;
+	gap: 5vw;
 }
-.contact figure div{
+.contact span  div{
 	margin-bottom: 3vh;
-	margin-left: -5vw;
+/*	margin-left: -5vw;*/
+
 }
-.contact figure{
+.contact span{
 display: initial;
 padding-left: 0;
-
+text-align: center;
 }
 footer{
 	padding-right: 3vw;
@@ -309,7 +319,7 @@ white-space: nowrap;
 
 	<div class="contact">
 		<p>Contact Us</p> 
-<figure>
+<span>
 		<div class="frame-spot">
 			<a href="mailto:gtoleo21@gmail.com"></a>
 		</div> 
@@ -322,7 +332,7 @@ white-space: nowrap;
 		 <div class="group-call">
 			<a href="tel:+2348147383504"></a>
 		 </div> 
-	</figure>
+	</span>
 	</div>
 
 	<div class="explore">
