--- a/other-pages/the-market.html
+++ b/other-pages/the-market.html
@@ -108,7 +108,6 @@ width: 2rem;
 	font-size: 1.2rem;
 	margin-bottom: 3vh;
 }
-
 .contact span div{
 display: inline-block;
 margin-left: 5vw;
@@ -123,9 +122,10 @@ align-items: center;
 }
 .news-form{
 	background:linear-gradient(to right, #838087, #848290, #86849c);
-	width: 70vw;
+	width: 80vw;
 	padding: 1rem;
 	border-radius: 0.6rem;
+
 }
 .submit{
 	background: #0F17CE;
@@ -154,8 +154,8 @@ margin-top: 2vh;
 }
 .newsletter{
 	margin-top: 6vh;
-	padding-left: 10vw;
-	padding-right: 10vw;
+	padding-left: 5vw;
+	padding-right: 5vw;
 }
 .newsletter p{
 	color: #fff;
@@ -266,6 +266,7 @@ footer{
 }
 .newsletter{
 	margin-top: 3vh;
+	padding-right: 8vw;
 }
 .newsletter p{
 	font-weight: 800;
@@ -289,8 +290,8 @@ white-space: nowrap;
 }
 
 }
-@media(min-width:900px){}
-@media(min-width:900px){}
+/*@media(min-width:900px){}
+@media(min-width:900px){}*/
 
 
 	</style>
