--- a/other-pages/contact-us.html
+++ b/other-pages/contact-us.html
@@ -45,20 +45,21 @@ header div a{
 header div a:hover{
 background: red;
 }
-.sections{
+main{
 	display: inline-block;
 	padding-top: 0vh;
-	margin-left: 5vw;
-	margin-right: 5vw;
+	margin-left: 8vw;
+	margin-right: 10vw;
 	margin-bottom: 5vh;
 	text-align: center;
 	margin-top: -10vh;
 	background: #fff;
-	width: 85vw;
-	padding: 1rem;
+	width: 80vw;
+	padding: 0.5rem;
+	padding-bottom: 2rem;
+	box-shadow: 0px 0px 1px 1px #efefef;
+border-radius: 1rem;
 }
-
-
 
 footer{
 	background-image:url("../images/web9 1.png") ;
@@ -99,17 +100,24 @@ width: 2rem;
 	font-size: 1.2rem;
 	margin-bottom: 3vh;
 }
-.contact figure{
-display: flex;
+.contact span div{
+display: inline-block;
+margin-left: 5vw;
+margin-right: 5vw;
+}
+.contact span{
+display: block;
 gap: 9vw;
-padding-left: 4vw;
-padding-right: 10vw;
+/*padding-left: 4vw;
+padding-right: 10vw;*/
+align-items: center;
 }
 .news-form{
 	background:linear-gradient(to right, #838087, #848290, #86849c);
-	width: 70vw;
+	width: 80vw;
 	padding: 1rem;
 	border-radius: 0.6rem;
+
 }
 .submit{
 	background: #0F17CE;
@@ -138,8 +146,8 @@ margin-top: 2vh;
 }
 .newsletter{
 	margin-top: 6vh;
-	padding-left: 10vw;
-	padding-right: 10vw;
+	padding-left: 5vw;
+	padding-right: 5vw;
 }
 .newsletter p{
 	color: #fff;
@@ -176,26 +184,110 @@ margin-top: 3vh;
 	padding-bottom: 5vh;
 	border-bottom: 4px solid #fff;
 }
+.asides{
+padding-left: 10vw;
+padding-right: 10vw;
+margin-top: 5vh;	
+}
+.btn button{
+border: none;
+color:#fff;
+background: #7C4B00;
+padding:0.5rem 2rem 0.5rem 2rem;
+border-radius: 0.4rem;
+}
+.btn button:hover{
+cursor: pointer;
+}
+.btn{
+	margin-top: 5vh;
+	margin-bottom: 2vh;
+}
+main form input{
+	display: block;
+width: 60vw;
+margin-top: 5vh;
+margin-left: 10vw;
+border-radius: 0.8rem;
+border:1px solid #999;
+height: 10vh;
+}
+.message1, .message2{
+	height: 20vh;
+}
+.socials{
+content: url("../images/");
+display: block;
+content: url("../images/Frame.png");
+background: #777;
+height: 10vw;
+width: 10vw;
+padding: 0.3rem;
+margin-left:35vw ;
+}
+.customer{
+content: url("../images/Customer care 2.png");
+height: 12vw;
+width: 12vw;
+margin-left:35vw ;
+margin-top:10vh ;
+}
+.email-icon{
+content: url("../images/Frame (1).png");
+height: 12vw;
+width: 12vw;
+margin-left:35vw ;
+margin-top:20vh ;
 
+}
+.teleg{
+content: url("../images/telegram 1.svg");
+height: 8vw;
+width: 8vw;
+margin-left: 20vw;
+background: #fff;
+padding: 0.3rem;
+border-radius: 0.8rem;
+display: block;
+margin-bottom: 5vh;
+background: #bbb;
+margin-top: 5vh;
+}
+.whats{
+height: 8vw;
+width: 8vw;
+margin-left: 20vw;
+content: url("../images/Frame (1).svg");
+background: #999;
+display: block;
+margin-bottom: 5vh;
 
-
-
-
+}
+.call{
+height: 8vw;
+width: 8vw;
+margin-left: 20vw;
+content: url("../images/Group 20.svg");
+background: #999;
+display: block;
+margin-bottom: 5vh;
+}
 
 @media(min-width:1020px){
 	.footer-child{
 	display: flex;
 	align-items: flex-start;
-	gap: 10vw;
+	gap: 5vw;
 }
-.contact figure div{
+.contact span  div{
 	margin-bottom: 3vh;
-	margin-left: -5vw;
+/*	margin-left: -5vw;*/
+
 }
-.contact figure{
+.contact span{
 display: initial;
 padding-left: 0;
-
+text-align: center;
 }
 footer{
 	padding-right: 3vw;
@@ -220,6 +312,8 @@ footer{
 }
 .newsletter{
 	margin-top: 3vh;
+	padding-right: 8vw;
+
 }
 .newsletter p{
 	font-weight: 800;
@@ -258,30 +352,60 @@ white-space: nowrap;
 
 <main>
 <section class="sections">
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
-	ggggggggggggggggggggggggggggggggggggggggggggggggg
+
+	<section class="sect1">
+
+		<div class="socials">
+		</div>
+
+		<div class="soc">
+			<a href="https://telegram.me/Leogerald" class="teleg"></a>
+			<a href="https://wa.me/+2348147383504" class="whats"></a>
+			<a href="tel:+2348147383504" class="call"></a>
+		</div>
+	</section>
+
+	<section class="sect2">
+		<div class="customer"></div>
+		<form class="chat">
+			<input type="text" placeholder="Name" class="name1">
+			<input type="text" placeholder="E-mail" class="email1">
+			<input type="text" placeholder="Message" class="message1">
+			<div class="btn">
+				<button type="submit">Chat</button>
+			</div>
+		</form>
+	</section>
+
+	<section class="sect3">
+		<div class="email-icon"></div>
+
+		<form class="email">
+			<input type="text" placeholder="Name" class="name2">
+			<input type="text" placeholder="E-mail" class="email2">
+			<input type="text" placeholder="Message" class="message2">
+			<div class="btn">
+				<button type="submit">E-mail</button>
+			</div>
+		</form>
+	</section>
 </section>
 
-<aside class="asides"></aside>
 
 </main>
+
+<p class="outside">
+	<aside class="asides">
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tortor lectus eleifend ut id conguelobortis. Volutpat fusce felis vitae dictumst egestas. Fringilla volutpat ut arcu, nam suscipit scelerisque ultrices. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tortor lectus eleifend ut id conguelobortis. 
+</aside>
+</p>
 
 <footer>
 	<div class="footer-child">
 
 	<div class="contact">
 		<p>Contact Us</p> 
-<figure>
+<span>
 		<div class="frame-spot">
 			<a href="mailto:gtoleo21@gmail.com"></a>
 		</div> 
@@ -294,7 +418,7 @@ white-space: nowrap;
 		 <div class="group-call">
 			<a href="tel:+2348147383504"></a>
 		 </div> 
-	</figure>
+	</span>
 	</div>
 
 	<div class="explore">
