--- a/other-pages/login.html
+++ b/other-pages/login.html
@@ -45,6 +45,20 @@ header div a{
 header div a:hover{
 background: red;
 }
+main{
+	display: inline-block;
+	margin-left: 8vw;
+	margin-right: 10vw;
+	margin-bottom: 5vh;
+	text-align: center;
+	margin-top: -10vh;
+	background: #fff;
+	width: 80vw;
+	padding: 0.5rem;
+	padding-bottom: 2rem;
+	box-shadow: 0px 0px 1px 1px #efefef;
+border-radius: 1rem;
+}
 .sections .sign-in{
 	padding: 1rem;
 	background: #eee;
@@ -79,18 +93,19 @@ form div input{
 	border: none;
 	padding: 0.5rem;
 	width: 40vw;
+	border-radius: 0.4rem;
 }
 .sections{
+	padding: 1rem;
 	display: inline-block;
-	padding-top: 0vh;
-	margin-left: 5vw;
+	margin-left: 3vw;
 	margin-right: 5vw;
 	margin-bottom: 5vh;
 	text-align: center;
-	margin-top: -10vh;
-	background: #fff;
-	width: 85vw;
-	padding: 1rem;
+	margin-top: -5vh;
+/*	background: #fff;*/
+	width: 80vw;
+	padding-top: 2rem;
 }
 .sections div{
 	display: inline-block;
@@ -142,17 +157,24 @@ width: 2rem;
 	font-size: 1.2rem;
 	margin-bottom: 3vh;
 }
-.contact figure{
-display: flex;
+.contact span div{
+display: inline-block;
+margin-left: 5vw;
+margin-right: 5vw;
+}
+.contact span{
+display: block;
 gap: 9vw;
-padding-left: 4vw;
-padding-right: 10vw;
+/*padding-left: 4vw;
+padding-right: 10vw;*/
+align-items: center;
 }
 .news-form{
 	background:linear-gradient(to right, #838087, #848290, #86849c);
-	width: 70vw;
+	width: 80vw;
 	padding: 1rem;
 	border-radius: 0.6rem;
+
 }
 .submit{
 	background: #0F17CE;
@@ -166,10 +188,6 @@ margin-top: 2vh;
 }
 .submit:hover{
 	cursor: pointer;
-}
-.buttons{
-	margin-top: 10vh;
-	white-space: nowrap;
 }
 .news-input{
 	margin-top: 3vh;
@@ -185,8 +203,8 @@ margin-top: 2vh;
 }
 .newsletter{
 	margin-top: 6vh;
-	padding-left: 10vw;
-	padding-right: 10vw;
+	padding-left: 5vw;
+	padding-right: 5vw;
 }
 .newsletter p{
 	color: #fff;
@@ -233,16 +251,17 @@ margin-top: 3vh;
 	.footer-child{
 	display: flex;
 	align-items: flex-start;
-	gap: 10vw;
+	gap: 5vw;
 }
-.contact figure div{
+.contact span  div{
 	margin-bottom: 3vh;
-	margin-left: -5vw;
+/*	margin-left: -5vw;*/
+
 }
-.contact figure{
+.contact span{
 display: initial;
 padding-left: 0;
-
+text-align: center;
 }
 footer{
 	padding-right: 3vw;
@@ -267,6 +286,8 @@ footer{
 }
 .newsletter{
 	margin-top: 3vh;
+	padding-right: 8vw;
+
 }
 .newsletter p{
 	font-weight: 800;
@@ -340,7 +361,7 @@ white-space: nowrap;
 
 	<div class="contact">
 		<p>Contact Us</p> 
-<figure>
+<span>
 		<div class="frame-spot">
 			<a href="mailto:gtoleo21@gmail.com"></a>
 		</div> 
@@ -353,7 +374,7 @@ white-space: nowrap;
 		 <div class="group-call">
 			<a href="tel:+2348147383504"></a>
 		 </div> 
-	</figure>
+	</span>
 	</div>
 
 	<div class="explore">
