--- a/other-pages/sign-up.html
+++ b/other-pages/sign-up.html
@@ -48,8 +48,8 @@ background: red;
 main{
 	display: inline-block;
 	padding-top: 0vh;
-	margin-left: 3vw;
-	margin-right: 5vw;
+	margin-left: 8vw;
+	margin-right: 10vw;
 	margin-bottom: 5vh;
 	text-align: center;
 	margin-top: -10vh;
@@ -88,10 +88,7 @@ margin-right: -0.3rem;
 border-bottom: 1px solid #aaa;	
 
 }
-.sections div:hover{
-background: #eeeeee;
-cursor: pointer;	
-}
+
 .button1{
 	text-decoration: none;
 padding: 0.2rem 1rem 0.2rem 1rem;
@@ -157,17 +154,24 @@ width: 2rem;
 	font-size: 1.2rem;
 	margin-bottom: 3vh;
 }
-.contact figure{
-display: flex;
+.contact span div{
+display: inline-block;
+margin-left: 5vw;
+margin-right: 5vw;
+}
+.contact span{
+display: block;
 gap: 9vw;
-padding-left: 4vw;
-padding-right: 10vw;
+/*padding-left: 4vw;
+padding-right: 10vw;*/
+align-items: center;
 }
 .news-form{
 	background:linear-gradient(to right, #838087, #848290, #86849c);
-	width: 70vw;
+	width: 80vw;
 	padding: 1rem;
 	border-radius: 0.6rem;
+
 }
 .submit{
 	background: #0F17CE;
@@ -196,8 +200,8 @@ margin-top: 2vh;
 }
 .newsletter{
 	margin-top: 6vh;
-	padding-left: 10vw;
-	padding-right: 10vw;
+	padding-left: 5vw;
+	padding-right: 5vw;
 }
 .newsletter p{
 	color: #fff;
@@ -254,16 +258,17 @@ form{
 	.footer-child{
 	display: flex;
 	align-items: flex-start;
-	gap: 10vw;
+	gap: 5vw;
 }
-.contact figure div{
+.contact span  div{
 	margin-bottom: 3vh;
-	margin-left: -5vw;
+/*	margin-left: -5vw;*/
+
 }
-.contact figure{
+.contact span{
 display: initial;
 padding-left: 0;
-
+text-align: center;
 }
 footer{
 	padding-right: 3vw;
@@ -288,6 +293,8 @@ footer{
 }
 .newsletter{
 	margin-top: 3vh;
+	padding-right: 8vw;
+
 }
 .newsletter p{
 	font-weight: 800;
@@ -376,7 +383,7 @@ white-space: nowrap;
 
 	<div class="contact">
 		<p>Contact Us</p> 
-<figure>
+<span>
 		<div class="frame-spot">
 			<a href="mailto:gtoleo21@gmail.com"></a>
 		</div> 
@@ -389,7 +396,7 @@ white-space: nowrap;
 		 <div class="group-call">
 			<a href="tel:+2348147383504"></a>
 		 </div> 
-	</figure>
+	</span>
 	</div>
 
 	<div class="explore">
