--- a/other-pages/login.html
+++ b/other-pages/login.html
@@ -77,6 +77,9 @@ cursor: pointer;
 padding: 0.5rem 2rem 0.5rem 2rem;
 
 }
+.buttons{
+	white-space: nowrap;
+}
 .create{
 	text-decoration: none;
 	color: black;
