--- a/other-pages/about-us.html
+++ b/other-pages/about-us.html
@@ -188,7 +188,9 @@ margin-top: 3vh;
 text-align: center;
 background: linear-gradient(180deg, rgba(255, 255, 255, 0) 34.38%, rgba(255, 240, 109, 0.116) 75.52%),
 linear-gradient(0deg, #FFFFFF, #FFFFFF);
-width: 94%;
+width: 70vw;
+margin-left: 3vw;
+margin-right: 5vw;
 padding: 2rem;
 padding-bottom: 3rem;
 /*margin-right: 3%;*/
@@ -399,9 +401,14 @@ white-space: nowrap;
 .submit{
 	margin-right: -25vw;
 }
+.thing1, .thing2, .thing3{
+	width: 24vw;
+	margin-left: 0;
+	margin-right: 0;
+}
 .things{
 	display: flex;
-	gap: 5vw;
+	gap: 4vw;
 }
 
 }
