--- a/other-pages/about-us.html
+++ b/other-pages/about-us.html
@@ -572,6 +572,8 @@ ero donec tellus.</p>
 		<br>
 		<input type="text" placeholder="Enter E-mail Address" class="news-input">
 		<br>
+		<h4 class="h4"></h4>
+		
 		<button class="submit">Join</button>	
 		</form>
 		
@@ -585,5 +587,6 @@ ero donec tellus.</p>
 </footer>
 
 </div>
+<script src="../js/about.js"></script>
 </body>
 </html>
