--- a/other-pages/login.html
+++ b/other-pages/login.html
@@ -420,6 +420,7 @@ white-space: nowrap;
 		<br>
 		<input type="text" placeholder="Enter E-mail Address" class="news-input">
 		<br>
+		<h4 class="h4"></h4>
 		<button class="submit">Join</button>	
 		</form>
 		
@@ -433,5 +434,6 @@ white-space: nowrap;
 </footer>
 
 </div>
+<script src="../js/login.js"></script>
 </body>
 </html>
