--- a/other-pages/contact-us.html
+++ b/other-pages/contact-us.html
@@ -461,6 +461,7 @@ white-space: nowrap;
 		<br>
 		<input type="text" placeholder="Enter E-mail Address" class="news-input">
 		<br>
+		<h4 class="h4"></h4>
 		<button class="submit">Join</button>	
 		</form>
 		
@@ -474,5 +475,6 @@ white-space: nowrap;
 </footer>
 
 </div>
+<script src="../js/contact.js"></script>
 </body>
 </html>
