--- a/other-pages/sign-up.html
+++ b/other-pages/sign-up.html
@@ -439,6 +439,7 @@ white-space: nowrap;
 		<br>
 		<input type="text" placeholder="Enter E-mail Address" class="news-input">
 		<br>
+		<h4 class="h4"></h4>
 		<button class="submit">Join</button>	
 		</form>
 		
@@ -452,5 +453,7 @@ white-space: nowrap;
 </footer>
 
 </div>
+<script src="../js/sign-up.js"></script>
+
 </body>
 </html>
