--- a/other-pages/the-market.html
+++ b/other-pages/the-market.html
@@ -376,6 +376,8 @@ white-space: nowrap;
 		<br>
 		<input type="text" placeholder="Enter E-mail Address" class="news-input">
 		<br>
+		<h4 class="h4"></h4>
+		
 		<button class="submit">Join</button>	
 		</form>
 		
@@ -389,5 +391,6 @@ white-space: nowrap;
 </footer>
 
 </div>
+<script src="../js/market.js"></script>
 </body>
 </html>
